# haskell_programming

Functors/: Exercises.hs  HeavyLifting.hs  QuickCheckTests.hs  ReplaceExperiment.hs
Monoid/: Booly.hs  Madness.hs  Optional.hs
OrphanInstance/: Listy.hi  Listy.hs  ListyInstance.hs
algebrainDataTypes/: BinaryTree.hs  Doggies.hs  Exercises.hs  Hutton.hs  LiveStock.hs  Person.hs  Phone.hs  Price.hs  Programmers.hs  Vigenere.hs
applicatives/: BadMonoid.hs  Constant.hs  Cow.hs  Fixer.hs  Identity.hs  Lookups.hs  MaybeValidate.hs
dataTypes/: Exercises.hs  Mood.hs
experiments/: Addition.hs  Apl1.hs  ApplicativeExercises.hs  BadMonoid.hs  Bull.hs  DividedBy.hs  Experiments.hs  First.hs  ListAplicative.hs  Multiplication.hs  MyArbitrary.hs  SemigroupTest.hs  TestMonoid.hs  Validation.hs  WordNumber.hs  ZipListApplicative.hs  experiments.cabal
folding/: DatabaseProcessing.hs  Exercises.hs  FixError.hs
functionalPatterns/: ArtfulDody.hs  Case.hs  Company.hs  Exercises.hs  GrabBag.hs  Guards.hs  MatchingTuples.hs  NoDotSyntax.hs  RegisteredUser.hs
hangman/: hangman.cabal  stack.yaml
hangman/exec/: Main.hs
hangman/src/: Hangman.hs  Main.hs
hangman/test/: Spec.hs
lists/: Cipher.hs  EnumFromTo.hs  Exercises.hs  FearfulSymmetry.hs  Filtering.hs  MyHead.hs  SquareCube.hs  Zipping.hs
morse/: morse.cabal  package.yaml
projects/: Palindrome.hs  Person.hs
recursion/: Factorial.hs  Fibonacci.hs  IncTimes.hs  IntegralDivision.hs  Recursion.hs  ReviewCurrying.hs  WordNumber.hs
signalingAdversity/: BinaryTree.hs  EitherLibrary.hs  MaybeLibrary.hs  Person.hs  (+2 more)
(+24 files in other folders)
