name:               hangman
version:            0.1.0.0
synopsis:           Playing Hangman

-- description:
homepage:           https://github.com/githubuser/hangman#readme
license:            BSD3
license-file:       LICENSE
author:             Calin
maintainer:         calin@agilefreaks.com
copyright:          2021 Calin
category:           Game
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md

library
  exposed-modules:  Hangman
  hs-source-dirs:   src
  build-depends:
      base    >=4.7 && <5
    , random
    , split

  default-language: Haskell2010

executable hangman
  hs-source-dirs:   exec
  main-is:          Main.hs
  build-depends:
      base     >=4.7 && <5
    , hangman
    , random
    , split

  default-language: Haskell2010

test-suite hangman-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base        >=4.7 && <5
    , containers
    , hangman
    , hspec
    , QuickCheck

  default-language: Haskell2010
